create site and update workflow

--- a/src/app/pages/workflows/modal-add-task/modal-add-task.component.html
+++ b/src/app/pages/workflows/modal-add-task/modal-add-task.component.html
@@ -1,7 +1,7 @@
 <div class="modal-content">
   <div class="modal-header">
     <h5 class="modal-title">Ajouter une tâche</h5>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <button type="button" class="close" (click)="activeModal.dismiss()" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -58,7 +58,7 @@
     <button
       type="button"
       class="btn btn-primary"
-      (click)="activeModal.close('Close click')"
+      (click)="enregistrer()"
     >
       Enregistrer
     </button>
