--- a/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
+++ b/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
@@ -63,7 +63,7 @@
       <h5>Sélection</h5>
       <div class="card border-dark">
         <ul class="list-group">
-          <li class="list-group-item" *ngFor="let user of selectedItems">
+          <li class="list-group-item" *ngFor="let user of selectedUsers">
             <div class="row justify-content-between">
               <span class="col-md-9">
                 {{ user.name }}
