--- a/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
+++ b/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
@@ -3,7 +3,8 @@
 
 <!-- <div class="container-fluid"> -->
 <div class="card rounded shadow p-5 mt-3 border-0">
-  <form class="">
+  <h1 class="title text-lg-center">Remplissez le formulaire ci-dessous pour l'initiation de votre workflow.</h1>
+  <form class="mt-3">
     <div class="row">
       <div class="col-lg-7">
         <div class="form-group">
@@ -102,19 +103,19 @@
         <div class="form-row justify-content-arround">
           <div class="col-md-6">
             <h3 class="form-control-label">Tâches</h3>
-            <div class="form-group" *ngFor="let tache of taches">
-              <select class="form-control">
-                <option *ngFor="let tache of taches" [value]="tache.id">
-                  {{ tache.titre }}
+            <div class="form-group" *ngFor="let task of tasksWorkflow">
+              <select class="form-control" name="user" [(ngModel)]="selectedTask[i]">
+                <option *ngFor="let task of tasksWorkflow" [value]="task.id">
+                  {{ task.titre }}
                 </option>
               </select>
             </div>
           </div>
           <div class="col-md-6">
             <h3 class="form-control-label">Utilisateurs</h3>
-            <div class="form-group" *ngFor="let tache of taches">
-              <select [(ngModel)]="tache.user" class="form-control">
-                <option *ngFor="let user of users" [value]="user.id">
+            <div class="form-group" *ngFor="let task of tasksWorkflow">
+              <select [(ngModel)]="selectedUser[i]" class="form-control">
+                <option *ngFor="let user of usersWorkflow" [value]="user.id">
                   {{ user.name }}
                 </option>
               </select>
@@ -130,6 +131,7 @@
         <button
           class="btn btn-success col-lg-2 mt-3"
           type="submit"
+          (click)="enregistrer()"
         >
           enregistrer
         </button>
