--- a/src/app/pages/sites/add-site/add-site.component.html
+++ b/src/app/pages/sites/add-site/add-site.component.html
@@ -1,4 +1,4 @@
-<div class="container-fuild">
+<div class="container-fluid">
   <div class="card">
     <form>
       <h1 class="title">Remplissez ce formulaire</h1>
