--- a/src/app/pages/signature/signature.component.html
+++ b/src/app/pages/signature/signature.component.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid mt-5">
   <button class="btn btn-success">Signer</button>
-  <button class="btn btn-primary">Véifier</button>
+  <button class="btn btn-primary">Vérifier</button>
 
   <div class="mt-5">
     <h4 class="card-title">Vos signatures</h4>
