--- a/src/app/pages/workflows/workflows.component.html
+++ b/src/app/pages/workflows/workflows.component.html
@@ -1,17 +1,11 @@
 <div class="header bg-gradient-danger pb-3 pt-5 pt-md-8">
-  <a
-    class="nav-link"
-    class="btn btn-primary ml-3 mt-4"
-    (click)="initiateWorkflow()"
-    *ngIf="display === false"
-    ><img
-      width="25"
-      height="25"
-      src="https://img.icons8.com/ios/25/ffffff/serial-tasks--v1.png"
-      alt="serial-tasks--v1"
-    />
-    Lancer un workflow</a
-  >
+  <a class="nav-link" class="btn btn-primary ml-3 mt-4" (click)="initiateWorkflow()" *ngIf="display === false"><img
+      width="23" height="23" src="https://img.icons8.com/ios/23/ffffff/serial-tasks--v1.png" alt="serial-tasks--v1" />
+    Démarrer un workflow</a>
+
+    <a class="nav-link" class="btn btn-primary ml-3 mt-4" (click)="initiateWorkflow()" *ngIf="display === false"><img
+      width="23" height="23" src="https://img.icons8.com/ios/23/ffffff/serial-tasks--v1.png" alt="serial-tasks--v1" />
+    Créer un modèle de workflow</a>
 </div>
 
 <div class="container-fluid">
@@ -21,5 +15,9 @@
 
   <div *ngIf="display === true">
     <app-add-workflow-form></app-add-workflow-form>
+  </div>
+
+  <div>
+    <app-steps-flow></app-steps-flow>
   </div>
 </div>
