--- a/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
+++ b/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
@@ -104,7 +104,7 @@
           <div class="col-md-6">
             <h3 class="form-control-label">Tâches</h3>
             <div class="form-group" *ngFor="let task of tasksWorkflow">
-              <select class="form-control" name="user" [(ngModel)]="selectedTask[i]">
+              <select class="form-control" name="user" (change)="onTaskSelect($event.target.value, i)">
                 <option *ngFor="let task of tasksWorkflow" [value]="task.id">
                   {{ task.titre }}
                 </option>
@@ -114,7 +114,7 @@
           <div class="col-md-6">
             <h3 class="form-control-label">Utilisateurs</h3>
             <div class="form-group" *ngFor="let task of tasksWorkflow">
-              <select [(ngModel)]="selectedUser[i]" class="form-control">
+              <select class="form-control" (change)="onUserSelect($event.target.value, i)">
                 <option *ngFor="let user of usersWorkflow" [value]="user.id">
                   {{ user.name }}
                 </option>
