--- a/src/app/pages/workflows/list/list.component.html
+++ b/src/app/pages/workflows/list/list.component.html
@@ -1,6 +1,6 @@
- <div class=" row justify-content-center mt-3">
-  <div class="col-lg-6 ">
-    <div class="row ml-2 mr-2">
+ <div class=" row justify-content-center mt-5">
+  <div class="col-lg-12 ">
+    <div class="row">
       <div class="card col-lg-11 rounded shadow border-0 mt-2">
         <div class="card-content">
           <div
@@ -9,19 +9,19 @@
             <span class="card-title text-primary font-weight-bold"
               >Workflows initiés</span
             >
-            <span>
+            <!-- <span>
               <a
                 routerLinkActive="active"
                 [routerLink]="['/workflows/inities']"
               >
                 <button class="btn btn-primary btn-sm">Lister</button>
               </a>
-            </span>
+            </span> -->
           </div>
           <div class="card-body">
             <div class="">
               <div
-                class="Workflows card mt-2 rounded shadow--hover"
+                class="Workflows card mt-4 rounded shadow--hover"
                 *ngFor="let workflow of workflowTab"
               >
                 <div class="card-header bg-primary d-flex justify-content-between align-content-start text-white text-darker">
@@ -58,30 +58,30 @@
       
     </div>
   </div>
-  <div class="col-lg-6">
-    <div class="row ml-2 mr-2">
+  <div class="col-lg-12 mt-5">
+    <div class="row ">
       <!-- <div class="col-lg-1"></div> -->
       <div class="card col-lg-11 rounded border-0 shadow mt-2">
         <div class="card-content">
           <div
             class="card-header text-black-50 d-flex justify-content-between align-items-start"
           >
-            <span class="card-title text-green font-weight-bold"
+            <span class="card-title text-green font-weight-bold text-lg-left"
               >Tâches attribuées</span
             >
-            <span>
+            <!-- <span>
               <a
                 routerLinkActive="active"
                 [routerLink]="['/workflows/attribuees']"
               >
                 <button class="btn btn-success btn-sm">Lister</button>
               </a>
-            </span>
+            </span> -->
           </div>
           <div class="card-body">
             <div class="d-block">
               <div
-                class="Workflows d-block card mt-2 rounded shadow--hover"
+                class="Workflows d-block card mt-4 rounded shadow--hover"
                 *ngFor="let workflow of workflowTab"
               >
                 <div class="card-header d-flex justify-content-between align-content-start bg-green text-white text-darker">
