--- a/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
+++ b/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
@@ -83,11 +83,11 @@
         <div class="col-lg-12 mt-5">
           <div class="new-tasks">
             <div class="row">
-              <div class="col-lg-5">
+              <div class="col-lg-7">
                 <h2>Créer des tâches</h2>
 
                 <div class="row">
-                  <div class="form-group col">
+                  <div class="form-group col-3">
                     <label class="form-control-label" for="numTasks"
                       >Nombre de tâches</label
                     >
@@ -100,13 +100,18 @@
                       required
                     />
                   </div>
-                  <div class="form-group col align-self-end">
+                  <div class="form-group col-2 align-self-end">
                     <label class="form-control-label"></label>
                     <button class="btn btn-primary" (click)="createTasks()">
                       Créer
                     </button>
                   </div>
-                  
+                  <div class="form-group col-2 align-self-end">
+                    <label class="form-control-label"></label>
+                    <button type="button" class="btn btn-success" (click)="saveTasks()">
+                      Enregistrer
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -178,9 +183,6 @@
                 </button>
               </div>
             </div>
-            <button type="button" class="btn btn-success" (click)="saveTasks()">
-              Enregistrer
-            </button>
           </div>
         </div>
       </div>
